k8s/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  selector:
    matchLabels:
      component: api
  replicas: 1
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - name: php-api
          image: 123.abc.ecr.ap-northeast-1.amazonaws.com/acme-php-api:${ECR_IMAGE_REVISION}
          ports:
            - containerPort: 9000
        - name: nginx
          image: 123.abc.ecr.ap-northeast-1.amazonaws.com/acme-nginx:${ECR_IMAGE_REVISION}
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: aws-ecr # kubectl create secret docker-registry aws-ecr --docker-server=https://123.abc.ecr.ap-northeast-1.amazonaws.com --docker-username=AWS --docker-password=$(aws ecr get-login --no-include-email | awk '{print $6}')
