k8s/scheduler-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler-deployment
spec:
  selector:
    matchLabels:
      component: scheduler
  replicas: 1
  template:
    metadata:
      labels:
        component: scheduler
    spec:
      volumes:
        - name: storage-volume
          persistentVolumeClaim:
            claimName: storage-persistent-volume-claim
      containers:
        - name: php-scheduler
          image: 123.abc.ecr.ap-northeast-1.amazonaws.com/acme-php-scheduler:${ECR_IMAGE_REVISION}
          volumeMounts:
            - name: storage-volume
              mountPath: /app/storage/shared
      imagePullSecrets:
        - name: aws-ecr
