k8s/api-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: api-cluster-ip
spec:
  type: ClusterIp
  selector:
    component: api
  ports:
    - port: 80
      targetPort: 80
