k8s/api-load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: api-load-balancer
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local # Preserves the client source IP (but risks potentially imbalanced traffic spreading)
  selector:
    component: api
  ports:
    - port: 80
      targetPort: 80
